# HttpServer

./: .gitignore  CMakeLists.txt  README.md
http_app/: CMakeLists.txt  main.cpp
http_app/pages/: 400.html  403.html  404.html  index.html
http_lib/: CMakeLists.txt
http_lib/include/: command.hpp  httpServer.hpp  socket.hpp
http_lib/include/http/: command.hpp  connection.hpp  httpServer.hpp  request.hpp  socket.hpp  worker.hpp
http_lib/scripts/: gcovr  kcov  lcov
http_lib/src/: command.cpp  connection.cpp  httpServer.cpp  request.cpp  socket.cpp  worker.cpp
http_lib/test/: parser_test.hpp  socket_test.hpp  test_main.cpp  worker_test.hpp
http_lib/test/test_data/: 400.html  403.html
